# astarte-message-hub-proto

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: check-code-generation.yaml  code-generation.yaml  commit-code-generation.yaml  cpp-code-generation.yaml  python-check-builder.yaml  python-code-generation.yaml  python-code-quality.yml  python-publish.yaml  reuse-lint.yaml  rust-check-build.yaml  rust-check-builder.yaml  rust-check-code-generation.yaml  rust-code-check.yaml  rust-code-generation.yaml  rust-publish.yaml
.reuse/: dep5
cpp/: CMakeLists.txt  README.md  pkg-config-template.pc.in
cpp/astarteplatform/msghub/: astarte_data.grpc.pb.cc  astarte_data.grpc.pb.h  astarte_data.pb.cc  astarte_data.pb.h  astarte_message.grpc.pb.cc  astarte_message.grpc.pb.h  astarte_message.pb.cc  astarte_message.pb.h  astarte_type.grpc.pb.cc  astarte_type.grpc.pb.h  astarte_type.pb.cc  astarte_type.pb.h  config.grpc.pb.cc  config.grpc.pb.h  config.pb.cc  config.pb.h  interface.grpc.pb.cc  interface.grpc.pb.h  interface.pb.cc  interface.pb.h  message_hub_error.grpc.pb.cc  message_hub_error.grpc.pb.h  message_hub_error.pb.cc  message_hub_error.pb.h  message_hub_service.grpc.pb.cc  message_hub_service.grpc.pb.h  message_hub_service.pb.cc  message_hub_service.pb.h  node.grpc.pb.cc  node.grpc.pb.h  node.pb.cc  node.pb.h  property.grpc.pb.cc  property.grpc.pb.h  property.pb.cc  property.pb.h
cpp/cmake/: AstarteProto.cmake  Config.cmake.in  ProtoCompiler.cmake
cpp/sample_project/: CMakeLists.txt  conanfile.py
proto/astarteplatform/msghub/: astarte_data.proto  astarte_data_message.proto  astarte_message.proto  config.proto  interface.proto  message_hub_error.proto  message_hub_service.proto  node.proto  property.proto
python/: README.md  protoc.py  pyproject.toml
python/astarteplatform/msghub/: astarte_data_pb2.py  astarte_data_pb2.pyi  astarte_data_pb2_grpc.py  astarte_message_pb2.py  astarte_message_pb2.pyi  astarte_message_pb2_grpc.py  astarte_type_pb2.py  astarte_type_pb2.pyi  astarte_type_pb2_grpc.py  config_pb2.py  config_pb2.pyi  config_pb2_grpc.py  interface_pb2.py  interface_pb2.pyi  interface_pb2_grpc.py  message_hub_error_pb2.py  message_hub_error_pb2.pyi  message_hub_error_pb2_grpc.py  message_hub_service_pb2.py  message_hub_service_pb2.pyi  message_hub_service_pb2_grpc.py  node_pb2.py  node_pb2.pyi  node_pb2_grpc.py  property_pb2.py  property_pb2.pyi  property_pb2_grpc.py
rust/: Cargo.toml  build.rs
rust/astarte-message-hub-proto/: Cargo.toml  README.md
rust/astarte-message-hub-proto-mock/: Cargo.toml
rust/astarte-message-hub-proto-mock/src/: lib.rs
rust/astarte-message-hub-proto/examples/: client.rs
rust/astarte-message-hub-proto/src/: astarteplatform.msghub.rs  error.rs  lib.rs  mock.rs  proto_message_hub.rs  types.rs
rust/rust-codegen/: Cargo.toml
rust/rust-codegen/src/: main.rs
scripts/: cpp_codegen.sh  protoc_check.sh  python_codegen.sh  rust_codegen.sh
