# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "astarte_message_hub_proto"
description="Astarte message hub protocol buffers for Python"
version = "0.6.0"
authors = [
    { name = "Simone Orru", email = "simone.orru@secomind.com" }
]
readme = "README.md"
requires-python = ">=3.8"
# Classifier list: https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = ["grpcio", "protobuf"]

[project.optional-dependencies]
static = ["black", "pylint", "termcolor"]

[project.urls]
Source = "https://github.com/astarte-platform/astarte-message-hub-proto"
