# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
resolver = "2"
members = [
  "astarte-message-hub-proto",
  "rust-codegen",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.72.0"

[workspace.dependencies]
chrono = "0.4.0"
clap = "4.3.24"
color-eyre = "0.6.0"
env_logger = "0.11.0"
log = "0.4.0"
pbjson-types = "0.6.0"
prost = "0.12.0"
thiserror = "1.0.0"
tokio = "1.33.0"
tonic = "0.11.0"
tonic-build = "0.11.0"
uuid = "1.0.0"
