# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
resolver = "2"
members = [
  "astarte-message-hub-proto",
  "astarte-message-hub-proto-mock",
  "rust-codegen",
]

[workspace.package]
version = "0.8.4"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.78"
homepage = "https://astarte.cloud/"
repository = "https://github.com/astarte-platform/astarte-message-hub-proto"
readme = "README.md"

[workspace.dependencies]
astarte-message-hub-proto = { path = "./astarte-message-hub-proto", version = "=0.8.4" }
chrono = "0.4.0"
clap = "4.5.31"
color-eyre = "0.6.3"
env_logger = "0.11.6"
log = "0.4.26"
mockall = "0.13.1"
pbjson-types = "0.7.0"
prost = "0.13.5"
serde = "1.0.0"
serde_json = "1.0.0"
thiserror = "2.0.0"
tokio = "1.43.0"
tonic = "0.14.2"
tonic-build = "0.12.3"
uuid = "1.0.0"
