# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
resolver = "3"
members = [
  "astarte-message-hub-proto",
  "astarte-message-hub-proto-mock",
  "rust-codegen",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
homepage = "https://astarte.cloud/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/astarte-platform/astarte-message-hub-proto"
rust-version = "1.85"

[workspace.dependencies]
astarte-message-hub-proto = { path = "./astarte-message-hub-proto", version = "=0.9.0" }
chrono = "0.4.0"
clap = "4.5.31"
color-eyre = "0.6.3"
env_logger = "0.11.6"
log = "0.4.26"
mockall = "0.14.0"
prost = "0.14.0"
prost-types = "0.14.0"
serde = "1.0.0"
serde_json = "1.0.0"
thiserror = "2.0.0"
tokio = "1.43.0"
tonic = "0.14.0"
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
uuid = "1.0.0"
