# This file is part of Astarte.
#
# Copyright 2025 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-message-hub-proto-mock"
version.workspace = true
categories = ["development-tools::testing"]
edition.workspace = true
homepage.workspace = true
keywords = ["test", "mock"]
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Astarte message hub protocol buffers mock crate"

[dependencies]
astarte-message-hub-proto = { workspace = true }
mockall = { workspace = true }
tonic = { workspace = true }
