# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-message-hub-proto"
version = "0.6.2"
documentation = "https://docs.rs/astarte-message-hub-proto"
edition = { workspace = true }
homepage = "https://astarte.cloud/"
license = { workspace = true }
repository = "https://github.com/astarte-platform/astarte-message-hub-proto"
rust-version = { workspace = true }
description = "Astarte message hub protocol buffers for Rust"

[dependencies]
chrono = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
