# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "rust-codegen"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"
description ="Astarte message hub protocol code generator for Rust"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.0", features = ["derive"] }
color-eyre = "0.6.2"
pbjson-types = "=0.5.1"
prost = "=0.11.3"
tonic = "=0.8.2"
tonic-build = "=0.8.2"
