# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "rust-codegen"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
publish = false
rust-version = { workspace = true }
description = "Astarte message hub protocol code generator for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-build = { workspace = true }
